--- a/libcaf_io/CMakeLists.txt
+++ b/libcaf_io/CMakeLists.txt
@@ -24,6 +24,11 @@ set (LIBCAF_IO_SRCS
      src/scribe.cpp
      src/stream_manager.cpp
      src/test_multiplexer.cpp
+     src/acceptor_manager.cpp
+     src/multiplexer.cpp
+     src/dgram_servant.cpp
+     src/dgram_manager.cpp
+     src/ip_endpoint.cpp
      # BASP files
      src/header.cpp
      src/message_type.cpp
